# MOS-DEF

./: .gitignore  CMakeLists.txt  EXAMPLES.md  LICENSE  MosDef.sln  PROJECT MANIFESTO - MOS DEF.txt  README.md  build-status.md  build.bat  coverlet.runsettings
.github/workflows/: windows.yml
scripts/: build.ps1  test.ps1
src/: cli.c  cli.h  config.c  config.h  enum.c  enum.h  rotate.c  rotate.h  util.c  util.h
src/MosDef.Cli/: MosDef.Cli.csproj  Program.cs
src/MosDef.Cli/Models/: CliOptions.cs
src/MosDef.Cli/Properties/: AssemblyInfo.cs
src/MosDef.Cli/Services/: ArgumentParser.cs  CommandExecutor.cs
src/MosDef.Core/: MosDef.Core.csproj
src/MosDef.Core/DisplayConfig/: DisplayConfigEnums.cs  DisplayConfigStructs.cs  User32DisplayConfig.cs
src/MosDef.Core/Models/: DisplayInfo.cs  MosDefConfig.cs
src/MosDef.Core/Services/: ConfigManager.cs  DisplayManager.cs  SelectorParser.cs
src/MosDef.Gui/: MosDef.Gui.csproj  Program.cs
tests/MosDef.Tests/: MosDef.Tests.csproj
tests/MosDef.Tests/Cli/: ArgumentParserTests.cs
tests/MosDef.Tests/Core/: ConfigManagerTests.cs  SelectorParserTests.cs
